first draft of report

--- a/svhn/report/references.bib
+++ b/svhn/report/references.bib
@@ -37,7 +37,27 @@
 
 @misc{problemperformance,
     author    = "Rodrigo Benenson",
-    year      = "2018",
+    year      = 2018,
     title     = "Classification Dataset Results",
     url       = "http://rodrigob.github.io/are\_we\_there\_yet/build/classification\_datasets\_results.html\#4d4e495354"
+}
+
+@article{bestsvhn,
+    author =       "Chen-Yu Lee and Patrick W. Gallagher and Zhuowen Tu",
+    title =        "Generalizing Pooling Functions in Convolutional Neural Networks: Mixed, Gated, and Tree",
+    journal =      "IEEE Transactions on Pattern Analysis and Machine Intelligence",
+    volume =       40,
+    number =       4,
+    pages =        "863--865",
+    year =         2018,
+}
+
+@article{kmeanscnn,
+    author =       "Manchang Gu",
+    title =        "Convolution Neural Networks Embedding K-means",
+    journal =      " Journal of Information and Computational Science",
+    volume =       12,
+    number =       1,
+    pages =        "6391--6400",
+    year =         2015,
 }
